--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -16,6 +16,8 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to Dark Mode
+  features:
+    - content.code.annotate
 
 markdown_extensions:
   - abbr
@@ -29,7 +31,12 @@ markdown_extensions:
       permalink: true
   - pymdownx.arithmatex:
       generic: true
-      
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  
 nav:
 - Home: index.md
 - Tutorials:
